Travel added home and melbourne

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     }
 
     function goToPhotography() {
-      window.location.href = '4-photog.html';
+      window.location.href = 'https://www.abbyshen.com/photography/leica-q2';
     }
 
 
