--- a/3-travel.html
+++ b/3-travel.html
@@ -87,6 +87,15 @@
       background-color: rgba(245, 124, 0, 0.2);
     }
 
+    /* Special styling for home and heart locations */
+    .country-item.home {
+      color: #2E8B57; /* Sea green for home */
+    }
+
+    .country-item.heart {
+      color: #DAA520; /* Goldenrod for heart */
+    }
+
     .map-container {
       width: 80%;
       position: relative;
@@ -127,7 +136,27 @@
       border: 3px solid #fff;
       border-radius: 50%;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
 
+    /* Home marker style */
+    .home-marker {
+      background: transparent;
+      border: none;
+      font-size: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Heart marker style */
+    .heart-marker {
+      background: transparent;
+      border: none;
+      font-size: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
     /* Custom orange scrollbar for sidebar (shorter and more transparent) */
     .sidebar::-webkit-scrollbar {
@@ -139,7 +168,7 @@
     }
 
     .sidebar::-webkit-scrollbar-thumb {
-    background-color: rgba(245, 123, 0, 0.801); /* 50% transparent orange */
+    background-color: #FFB300; 
     border-radius: 4px;
     height: 33%; /* this visually limits thumb height to ~1/3 of the scroll track */
     }
@@ -280,8 +309,23 @@
   }
 ];
 
-  document.getElementById('countryCount').textContent = `${destinations.length} countries visited (in adulthood)`;
+  // Special locations (home and heart)
+  const specialLocations = [
+    {
+      name: "Sydney",
+      coords: [-33.8688, 151.2093],
+      type: "home",
+      description: "Home"
+    },
+    {
+      name: "Melbourne",
+      coords: [-37.8136, 144.9631],
+      type: "heart",
+      description: "A city very dear to my heart"
+    }
+  ];
 
+  document.getElementById('countryCount').textContent = `${destinations.length} countries visited (in adulthood)`;
 
   const map = L.map('map', {
     center: [35, 110],
@@ -302,9 +346,28 @@
     popupAnchor: [0, -10]
   });
 
+  // Home icon (replace 🏠 with your house emoji)
+  const homeIcon = L.divIcon({
+    className: 'home-marker',
+    html: '🏠', // Replace this with your house emoji
+    iconSize: [30, 30],
+    iconAnchor: [15, 15],
+    popupAnchor: [0, -15]
+  });
+
+  // Heart icon
+  const heartIcon = L.divIcon({
+    className: 'heart-marker',
+    html: '💛', // Yellow heart emoji
+    iconSize: [30, 30],
+    iconAnchor: [15, 15],
+    popupAnchor: [0, -15]
+  });
+
   const markers = {};
   const countryList = document.getElementById('countryList');
 
+  // Add regular destinations
   destinations.forEach(destination => {
     const popupContent = `
       <div class="popup-title">${destination.name}</div>
@@ -333,6 +396,36 @@
     countryList.appendChild(listItem);
   });
 
+  // Add special locations (home and heart)
+  specialLocations.forEach(location => {
+    let icon;
+    
+    if (location.type === 'home') {
+      icon = homeIcon;
+    } else if (location.type === 'heart') {
+      icon = heartIcon;
+    }
+
+    const popupContent = `
+      <div class="popup-title">${location.name}</div>
+      <div class="popup-description">${location.description}</div>
+    `;
+
+    const marker = L.marker(location.coords, { icon: icon }).addTo(map);
+    marker.bindPopup(popupContent, {
+      maxWidth: 250,
+      className: 'custom-popup'
+    });
+
+    marker.on('click', () => {
+      focusLocation(location);
+    });
+
+    markers[location.name] = marker;
+
+    // Note: Not adding to sidebar list - only on map
+  });
+
   function focusCountry(destination) {
     document.querySelectorAll('.country-item').forEach(item => {
       item.classList.remove('active');
@@ -349,12 +442,32 @@
     markers[destination.name].openPopup();
   }
 
+  function focusLocation(location) {
+    document.querySelectorAll('.country-item').forEach(item => {
+      item.classList.remove('active');
+    });
+
+    const activeItem = [...countryList.children].find(li => li.textContent === location.name);
+    if (activeItem) activeItem.classList.add('active');
+
+    map.setView(location.coords, 6, { // Higher zoom for cities
+      animate: true,
+      duration: 1
+    });
+
+    markers[location.name].openPopup();
+  }
+
   function goBack() {
     window.location.href = 'index.html';
   }
 
   setTimeout(() => {
-    const group = new L.featureGroup(destinations.map(d => L.marker(d.coords)));
+    const allMarkers = [
+      ...destinations.map(d => L.marker(d.coords)),
+      ...specialLocations.map(l => L.marker(l.coords))
+    ];
+    const group = new L.featureGroup(allMarkers);
     map.fitBounds(group.getBounds().pad(0.1));
   }, 100);
 </script>
