--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     body {
       background-color: #F5F5DC;
-      overflow: hidden;
       height: 100vh;
       font-family: Arial, sans-serif;
+      overflow-y: auto; /* Allow scrolling on mobile for better content access */
     }
 
     .static-image {
@@ -29,57 +29,61 @@
       transform: scale(1.1);
     }
 
-    @font-face {
-    font-family: 'NyghtSerif-LightItalic';
-    src: url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.otf') format('opentype');
-    font-weight: normal;
-    font-style: italic;
+    .static-image:active {
+      transform: scale(1.05); /* Touch-friendly feedback for mobile */
     }
 
     @font-face {
-    font-family: 'NyghtSerif-RegularItalic';
-    src: url('nyght-serif-main-font-otf/NyghtSerif-RegularItalic.otf') format('opentype');
-    font-weight: normal;
-    font-style: italic;
+      font-family: 'NyghtSerif-LightItalic';
+      src: url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.otf') format('opentype');
+      font-weight: normal;
+      font-style: italic;
     }
 
-    #welcome-text {
+    @font-face {
+      font-family: 'NyghtSerif-RegularItalic';
+      src: url('nyght-serif-main-font-otf/NyghtSerif-RegularItalic.otf') format('opentype');
+      font-weight: normal;
+      font-style: italic;
+    }
+
+    /* Text container for welcome text and subheading */
+    .text-container {
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-      font-size: 2.2rem;
-      font-family: 'NyghtSerif-LightItalic', serif;
-      color: #333;
-      z-index: 10; /* Stay above images */
-      pointer-events: none; /* So it doesn’t interfere with hovering images */
+      z-index: 10;
+      pointer-events: none;
+      width: 80%; /* Default for laptops */
+      max-width: 900px; /* Prevent text from stretching too wide */
     }
 
-      #subheading {
-        position: fixed;
-        top: 57%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 40%;
-        text-align: center;
-        font-size: 1.2rem;
-        font-family: 'NyghtSerif-LightItalic', serif;
-        color: #333;
-        z-index: 10; /* Stay above images */
-        pointer-events: none; /* So it doesn’t interfere with hovering images */
+    #welcome-text {
+      font-size: 2.5rem; /* Larger for laptops */
+      font-family: 'NyghtSerif-LightItalic', serif;
+      color: #333;
+      margin-bottom: 1.5rem; /* Increased spacing for better separation */
     }
-    
+
+    #subheading {
+      font-size: 1.3rem; /* Larger for laptops */
+      font-family: 'NyghtSerif-LightItalic', serif;
+      color: #333;
+    }
+
     .news-ticker {
       position: fixed;
       top: 0;
       width: 100%;
-      height: 40px;
+      height: 30px; /* Reduced from 50px for smaller text */
       background-color: #F5F5DC;
       color: #F57C00;
       font-family: 'NyghtSerif-LightItalic', serif;
-      font-size: 16px;
       overflow: hidden;
       z-index: 9999;
       display: flex;
@@ -89,9 +93,10 @@
     .ticker-text {
       white-space: nowrap;
       padding-left: 100%;
+      font-size: 1rem;
       animation: scroll-left 45s linear infinite;
     }
-
+    
     @keyframes scroll-left {
       0% {
         transform: translateX(0%);
@@ -100,16 +105,91 @@
         transform: translateX(-100%);
       }
     }
+
+    /* Media query for tablets and mobile (≤768px) */
+    @media screen and (max-width: 768px) {
+      .text-container {
+        width: 90%; /* Wider for mobile */
+        top: 45%; /* Slightly higher to avoid crowding */
+      }
+
+      #welcome-text {
+        font-size: 1.6rem; /* Smaller for mobile */
+      }
+
+      #subheading {
+        font-size: 1rem; /* Smaller for mobile */
+        margin-bottom: 0.5rem; /* Reduced spacing */
+      }
+
+      .news-ticker {
+        font-size: 14px; /* Smaller for mobile */
+        height: 35px; /* Reduced height */
+      }
+
+      .ticker-text {
+        animation: scroll-left 30s linear infinite; /* Faster for mobile */
+      }
+
+      .static-image {
+        max-width: 150px; /* Limit image size on mobile */
+        max-height: 150px;
+      }
+    }
+
+    /* Media query for very small screens (≤480px) */
+    @media screen and (max-width: 480px) {
+      .text-container {
+        width: 95%;
+        top: 40%; /* Adjust for tiny screens */
+      }
+
+      #welcome-text {
+        font-size: 1.3rem; /* Even smaller */
+      }
+
+      #subheading {
+        font-size: 0.8rem;
+      }
+
+      .news-ticker {
+        font-size: 12px;
+        height: 30px;
+      }
+    }
+
+    /* Media query for laptops (≥1024px) */
+    @media screen and (min-width: 1024px) {
+      .text-container {
+        width: 70%; /* Slightly narrower for larger screens */
+        max-width: 1000px; /* Allow slightly wider text on large laptops */
+      }
+
+      #welcome-text {
+        font-size: 2.8rem; /* Slightly larger for larger screens */
+      }
+
+      #subheading {
+        font-size: 1.4rem;
+      }
+
+      .news-ticker {
+        font-size: 20px; /* Slightly larger for readability */
+        height: 60px;
+      }
+    }
   </style>
 </head>
 <body>
-  <img class="static-image" id="image1" src="imgs/0-lamp-ideas.png" alt="Lamp Ideas" onclick="goToIdeas()">
-  <img class="static-image" id="image2" src="imgs/1-book.png" alt="Book" onclick="goToBooks()">
-  <img class="static-image" id="image3" src="imgs/2-food.png" alt="Food" onclick="goToFood()">
-  <img class="static-image" id="image4" src="imgs/3-travel.png" alt="Travel" onclick="goToTravel()">
-  <img class="static-image" id="image5" src="imgs/4-photog.png" alt="Photography" onclick="goToPhotography()">
-  <div id="welcome-text">welcome to abby's little nook on the internet</div>
-  <div id="subheading">designed to be a somewhat up to date second brain</div>
+  <img class="static-image" id="image1" src="imgs/0-lamp-ideas.png" alt="Lamp Ideas" aria-label="Navigate to Ideas page" onclick="goToIdeas()">
+  <img class="static-image" id="image2" src="imgs/1-book.png" alt="Book" aria-label="Navigate to Books page" onclick="goToBooks()">
+  <img class="static-image" id="image3" src="imgs/2-food.png" alt="Food" aria-label="Navigate to Food page" onclick="goToFood()">
+  <img class="static-image" id="image4" src="imgs/3-travel.png" alt="Travel" aria-label="Navigate to Travel page" onclick="goToTravel()">
+  <img class="static-image" id="image5" src="imgs/4-photog.png" alt="Photography" aria-label="Navigate to Photography page" onclick="goToPhotography()">
+  <div class="text-container">
+    <div id="welcome-text">welcome to abby's little nook on the internet</div>
+    <div id="subheading">designed to be a somewhat up to date second brain</div>
+  </div>
 
   <div class="news-ticker">
     <div class="ticker-text">
@@ -121,7 +201,6 @@
       "Tell me, what is it you want to do with your one wild and precious life" - Mary Oliver&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
   </div>
-
 
   <script>
     class StaticImage {
@@ -160,7 +239,6 @@
       document.body.style.cursor = `url('${randomCursor}') 16 16, auto`;
     }
 
-    // Functions to navigate to pages
     function goToIdeas() {
       window.location.href = '0-lamp-ideas.html';
     }
@@ -181,8 +259,6 @@
       window.location.href = 'https://www.abbyshen.com/photography/leica-q2';
     }
 
-
-
     const images = [
       new StaticImage(document.getElementById('image1'), 350, 350),
       new StaticImage(document.getElementById('image2'), 200, 200),
@@ -191,83 +267,76 @@
       new StaticImage(document.getElementById('image5'), 250, 250)
     ];
 
+    function generateRandomPositions() {
+      const positions = [];
+      const minDistance = 50;
+      const maxAttempts = 200;
 
-  function generateRandomPositions() {
-  const positions = [];
-  const minDistance = 50;
-  const maxAttempts = 200;
+      images.forEach(image => image.updateSize());
 
-  images.forEach(image => image.updateSize());
+      const welcome = document.getElementById('welcome-text');
+      const welcomeRect = {
+        x: window.innerWidth / 2 - (welcome.offsetWidth / 2),
+        y: window.innerHeight / 2 - (welcome.offsetHeight / 2),
+        width: welcome.offsetWidth,
+        height: welcome.offsetHeight
+      };
 
-  // Get welcome text dimensions and position
-  const welcome = document.getElementById('welcome-text');
-  const welcomeRect = {
-    x: window.innerWidth / 2 - (welcome.offsetWidth / 2),
-    y: window.innerHeight / 2 - (welcome.offsetHeight / 2),
-    width: welcome.offsetWidth,
-    height: welcome.offsetHeight
-  };
+      for (let i = 0; i < images.length; i++) {
+        let validPosition = false;
+        let attempts = 0;
+        let x, y;
 
-  for (let i = 0; i < images.length; i++) {
-    let validPosition = false;
-    let attempts = 0;
-    let x, y;
+        while (!validPosition && attempts < maxAttempts) {
+          x = Math.random() * (window.innerWidth - images[i].width - 50);
+          y = Math.random() * (window.innerHeight - images[i].height - 50);
 
-    while (!validPosition && attempts < maxAttempts) {
-      x = Math.random() * (window.innerWidth - images[i].width - 50);
-      y = Math.random() * (window.innerHeight - images[i].height - 50);
+          x = Math.max(25, Math.min(window.innerWidth - images[i].width - 25, x));
+          y = Math.max(25, Math.min(window.innerHeight - images[i].height - 25, y));
 
-      x = Math.max(25, Math.min(window.innerWidth - images[i].width - 25, x));
-      y = Math.max(25, Math.min(window.innerHeight - images[i].height - 25, y));
+          validPosition = true;
 
-      validPosition = true;
+          for (let j = 0; j < positions.length; j++) {
+            const other = images[j];
+            const existing = positions[j];
 
-      // Avoid other images
-      for (let j = 0; j < positions.length; j++) {
-        const other = images[j];
-        const existing = positions[j];
+            const overlap = !(
+              x > existing.x + other.width + minDistance ||
+              x + images[i].width + minDistance < existing.x ||
+              y > existing.y + other.height + minDistance ||
+              y + images[i].height + minDistance < existing.y
+            );
 
-        const overlap = !(
-          x > existing.x + other.width + minDistance ||
-          x + images[i].width + minDistance < existing.x ||
-          y > existing.y + other.height + minDistance ||
-          y + images[i].height + minDistance < existing.y
-        );
+            if (overlap) {
+              validPosition = false;
+              break;
+            }
+          }
 
-        if (overlap) {
-          validPosition = false;
-          break;
+          const overlapsWelcome = !(
+            x + images[i].width + minDistance < welcomeRect.x ||
+            x > welcomeRect.x + welcomeRect.width + minDistance ||
+            y + images[i].height + minDistance < welcomeRect.y ||
+            y > welcomeRect.y + welcomeRect.height + minDistance
+          );
+
+          if (overlapsWelcome) {
+            validPosition = false;
+          }
+
+          attempts++;
         }
+
+        positions.push({ x, y });
+        images[i].setPosition(x, y);
       }
-
-      // Avoid the welcome text area
-      const overlapsWelcome = !(
-        x + images[i].width + minDistance < welcomeRect.x ||
-        x > welcomeRect.x + welcomeRect.width + minDistance ||
-        y + images[i].height + minDistance < welcomeRect.y ||
-        y > welcomeRect.y + welcomeRect.height + minDistance
-      );
-
-      if (overlapsWelcome) {
-        validPosition = false;
-      }
-
-      attempts++;
     }
 
-    positions.push({ x, y });
-    images[i].setPosition(x, y);
-  }
-}
-
-
     window.addEventListener('resize', generateRandomPositions);
-
     generateRandomPositions();
     setRandomCursor();
   </script>
 
-  <!-- PlayHTML plugin -->
   <script src="https://unpkg.com/playhtml@latest/dist/playhtml.js"></script>
 </body>
 </html>
