mobile friendly - landing pgae

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     /* Media query for laptops (≥1024px) */
     @media screen and (min-width: 1024px) {
       .text-container {
-        width: 70%; /* Slightly narrower for larger screens */
+        width: 30%; /* Slightly narrower for larger screens */
         max-width: 1000px; /* Allow slightly wider text on large laptops */
       }
 
@@ -188,7 +188,7 @@
   <img class="static-image" id="image5" src="imgs/4-photog.png" alt="Photography" aria-label="Navigate to Photography page" onclick="goToPhotography()">
   <div class="text-container">
     <div id="welcome-text">welcome to abby's little nook on the internet</div>
-    <div id="subheading">designed to be a somewhat up to date second brain</div>
+    <div id="subheading">designed to be a second brain</div>
   </div>
 
   <div class="news-ticker">
