mobile font across all sites added ttf and woff

--- a/0-lamp-ideas.html
+++ b/0-lamp-ideas.html
@@ -7,12 +7,15 @@
   <link rel="icon" type="image/png" href="imgs/0-lamp-ideas.png">
   
   <style>
-    @font-face {
-      font-family: 'BZD_COLOUR_RGB';
-      src: url('other-font-otf/bianzhidai_COLR-RGB.otf') format('opentype');
-      font-weight: normal;
-      font-style: italic;
-    }
+  @font-face {
+    font-family: 'BZD_COLOUR_RGB';
+    src: 
+        url('other-font/bianzhidai_COLR-RGB.woff') format('woff'),
+        url('other-font/bianzhidai_COLR-RGB.otf') format('opentype');
+    font-weight: normal;
+    font-style: italic;
+}
+
 
     body {
       background-color: #F5F5DC;
