--- a/3-travel.html
+++ b/3-travel.html
@@ -16,12 +16,15 @@
       box-sizing: border-box;
     }
 
-    @font-face {
-      font-family: 'BZD_COLOUR_RGB';
-      src: url('other-font-otf/bianzhidai_COLR-RGB.otf') format('opentype');
-      font-weight: normal;
-      font-style: italic;
-    }
+  @font-face {
+    font-family: 'BZD_COLOUR_RGB';
+    src: 
+        url('other-font/bianzhidai_COLR-RGB.woff') format('woff'),
+        url('other-font/bianzhidai_COLR-RGB.otf') format('opentype');
+    font-weight: normal;
+    font-style: italic;
+}
+
 
     body {
       background-color: #F5F5DC;
