--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
 
     @font-face {
       font-family: 'NyghtSerif-LightItalic';
-      src: url('fonts/NyghtSerif-LightItalic.ttf') format('truetype');
-      font-weight: 300;
+      src: 
+        url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.ttf') format('truetype'),
+        url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.otf') format('opentype');
+        font-weight: 300;
       font-style: italic;
       font-display: swap;
     }
 
     @font-face {
-      font-family: 'NyghtSerif-RegularItalic';
-      src: url('fonts/NyghtSerif-RegularItalic.ttf') format('truetype');
+      font-family: 'NyghtSerif-LightItalic';
+      src: 
+        url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.ttf') format('truetype'),
+        url('nyght-serif-main-font-otf/NyghtSerif-LightItalic.ttf') format('opentype');
       font-weight: 400;
       font-style: italic;
       font-display: swap;
